SC_BEGIN_PACKAGE(ACQUISITION)

OPTION(COMPONENT_ACQUISITION "Build acquisition modules (seedlink, arclink, ...)" ON)
OPTION(COMPONENT_ACQUISITION_SEEDLINK "Build Seedlink" ON)
OPTION(COMPONENT_ACQUISITION_ARCLINK "Build ArcLink" ON)

IF (COMPONENT_ACQUISITION)

IF (COMPONENT_ACQUISITION_SEEDLINK OR COMPONENT_ACQUISITION_ARCLINK)
	IF (COMPONENT_ACQUISITION_SEEDLINK)
		SET(_seedlink seedlink)
	ENDIF (COMPONENT_ACQUISITION_SEEDLINK)
	IF (COMPONENT_ACQUISITION_ARCLINK)
		SET(_arclink arclink)
	ENDIF (COMPONENT_ACQUISITION_ARCLINK)

	SUBDIRS(common ${_seedlink} ${_arclink})
ENDIF (COMPONENT_ACQUISITION_SEEDLINK OR COMPONENT_ACQUISITION_ARCLINK)

ENDIF (COMPONENT_ACQUISITION)
