SC_BEGIN_PACKAGE(QC trunk)

OPTION(COMPONENT_QC "Build QC modules" ON)

IF (COMPONENT_QC)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../core/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../core/libs)

SUBDIRS(libs apps)

ENDIF (COMPONENT_QC)
