SC_BEGIN_PACKAGE(TRUNK trunk)

OPTION(COMPONENT_TRUNK "Build trunk package" ON)
OPTION(COMPONENT_TRUNK_PROCESSING "Build automatic processing modules" ON)

IF (COMPONENT_TRUNK)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../core/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../core/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../qc/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../qc/libs)

SUBDIRS(apps)

ENDIF (COMPONENT_TRUNK)
