SC_BEGIN_PACKAGE(TRUNK)

OPTION(SC_TRUNK_OWN_MSEED "Use included libmseed" ON)
OPTION(SC_TRUNK_DB_MYSQL "Add MYSQL support" ON)
OPTION(SC_TRUNK_DB_SQLITE3 "Add SQLite3 support" OFF)
OPTION(SC_TRUNK_DB_POSTGRESQL "Add PostgreSQL support" OFF)

IF (NOT SC_TRUNK_OWN_MSEED)
        SET(MSEED_REQUESTED_VERSION 2)
        FIND_PACKAGE(MSEED REQUIRED)
        SET(LIBMSEED_INCLUDE_DIR ${MSEED_INCLUDE_DIR})
        SET(LIBMSEED_LIBRARY ${MSEED_LIBRARY})
ELSE (NOT SC_TRUNK_OWN_MSEED)
        SET(LIBMSEED_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/3rd-party/libmseed CACHE INTERNAL "")
        SET(LIBMSEED_LIBRARY mseed CACHE INTERNAL "")
        MARK_AS_ADVANCED(MSEED_INCLUDE_DIR MSEED_LIBRARY)
        SET(MSEED_FOUND "YES")
ENDIF (NOT SC_TRUNK_OWN_MSEED)

#SET(Boost_DEBUG ON)

# Static Boost libs are not compiled with -fPIC on some
# systems so linking into a 64bit shared library does not work.
# Disabled it so far.
#SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_DETAILED_FAILURE_MSG ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options thread filesystem iostreams regex)
ADD_DEFINITIONS("-DBOOST_FILESYSTEM_VERSION=2")
IF (WIN32)
        ADD_DEFINITIONS("-DBOOST_ALL_NO_LIB")
        ADD_DEFINITIONS("-DBOOST_LIB_DIAGNOSTIC")
ENDIF (WIN32)

IF (SC_TRUNK_DB_MYSQL)
    FIND_PACKAGE(MySQL REQUIRED)
ENDIF (SC_TRUNK_DB_MYSQL)

IF (SC_TRUNK_DB_SQLITE3)
    FIND_PACKAGE(SQLite3 REQUIRED)
ENDIF (SC_TRUNK_DB_SQLITE3)

IF (SC_TRUNK_DB_POSTGRESQL)
    FIND_PACKAGE(PostgreSQL REQUIRED)
ENDIF (SC_TRUNK_DB_POSTGRESQL)

IF(WIN32)
	SET(SPREAD_REQUESTED_VERSION 4.0.1)
	FIND_PACKAGE(SPREAD REQUIRED)
ENDIF(WIN32)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../system/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../system/libs)

SUBDIRS(apps libs plugins)
