SET(SCTESTCLIENT_TARGET sctestclient)

SET(
    SCTESTCLIENT_HEADERS
    testclient.h
)

SET(
    SCTESTCLIENT_SOURCES
    testclient.cpp
    main.cpp
)

SC_ADD_EXECUTABLE(SCTESTCLIENT ${SCTESTCLIENT_TARGET})
TARGET_LINK_LIBRARIES(${SCTESTCLIENT_TARGET} ${Boost_program_options_LIBRARIES} )
SC_LINK_LIBRARIES_INTERNAL(${SCTESTCLIENT_TARGET} client log)