SET(MAG_TARGET scmag)

SET(
	MAG_SOURCES
		dmutil.cpp
		magtool.cpp
		scmagtool.cpp
)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(.)

SC_ADD_EXECUTABLE(MAG ${MAG_TARGET})
TARGET_LINK_LIBRARIES(${MAG_TARGET} ${Boost_program_options_LIBRARIES})
SC_LINK_LIBRARIES_INTERNAL(${MAG_TARGET} processing utils)
SC_LINK_LIBRARIES(${MAG_TARGET} ${OPENSSL_LIBRARIES})

