SET(SCIMPORT_TARGET scimport)

SET(
    SCIMPORT_HEADERS
    import.h
    filter.h
)

SET(
    SCIMPORT_SOURCES
    import.cpp
    filter.cpp
	main.cpp
)

SC_ADD_EXECUTABLE(SCIMPORT ${SCIMPORT_TARGET})
TARGET_LINK_LIBRARIES(${SCIMPORT_TARGET} ${Boost_thread_LIBRARIES})
SC_LINK_LIBRARIES_INTERNAL(${SCIMPORT_TARGET} client log utils)

