SET(SLPLUGIN_HEADERS
	plugin.h
	plugin_channel.h
	plugin_exceptions.h
	plugin_module.h
)


SET(SLPLUGIN_SOURCES
	plugin.c
	plugin_channel.cc
)

INCLUDE_DIRECTORIES(${SC3_PACKAGE_SOURCE_DIR}/common/libs/seiscomp/slutils)
INCLUDE_DIRECTORIES(../../3rd-party/qlib2)

ADD_LIBRARY(slplugin STATIC ${SLPLUGIN_SOURCES})

# INSTALL(
# 	TARGETS slplugin
# 	RUNTIME DESTINATION ${SC3_PACKAGE_BIN_DIR}
# 	ARCHIVE DESTINATION ${SC3_PACKAGE_LIB_DIR}
# 	LIBRARY DESTINATION ${SC3_PACKAGE_LIB_DIR}
# )
# 
# INSTALL(
# 	FILES ${SLPLUGIN_HEADERS}
# 	DESTINATION ${SC3_PACKAGE_INCLUDE_DIR}/slplugin
# )
